# risk-assessment

./: .cursorrules.txt  .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  REPORT.md  docker-compose.yml  pyproject.toml  requirements.txt  run_analysis.py  setup_check.py
.streamlit/: config.toml
dashboard/: streamlit_app.py
data/: prices.parquet  reference.duckdb  scenarios.parquet
documentation/: Stress_methodology.md  Stress_results.md  VaR_backtest_result.md  VaR_backtesting_methodology.md  data_loader_design.md  docker.md  risk_metrics_methodology.md
notebooks/: backtest_explained.ipynb  eda.ipynb  portfolio_risk.ipynb  risk_metrics_explained.ipynb  sql_latest_snapshot.ipynb  stress_explained.ipynb
src/: backtest.py  data_loader.py  reporting.py  returns.py  risk_metrics.py  stress.py  utils.py
tests/: test_data_loader_streched.py  test_risk_metrics.py  test_risk_metrics_streched.py
